封装网络请求

--- a/CCQNews/CCQNews/Base.lproj/Main.storyboard
+++ b/CCQNews/CCQNews/Base.lproj/Main.storyboard
@@ -33,10 +33,41 @@
                     <view key="view" contentMode="scaleToFill" id="jiK-rM-omg">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Tpz-ak-jmc">
+                                <rect key="frame" x="0.0" y="64" width="375" height="554"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="m4C-aA-X8G">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="554"/>
+                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="bNc-ft-2UB" id="3TA-9L-phR"/>
+                                            <outlet property="delegate" destination="bNc-ft-2UB" id="gbH-UO-3MW"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="m4C-aA-X8G" firstAttribute="top" secondItem="Tpz-ak-jmc" secondAttribute="top" id="4a4-pT-n74"/>
+                                    <constraint firstItem="m4C-aA-X8G" firstAttribute="leading" secondItem="Tpz-ak-jmc" secondAttribute="leading" id="MD2-IZ-rub"/>
+                                    <constraint firstAttribute="trailing" secondItem="m4C-aA-X8G" secondAttribute="trailing" id="mO8-En-tsD"/>
+                                    <constraint firstAttribute="bottom" secondItem="m4C-aA-X8G" secondAttribute="bottom" id="tba-rh-SUV"/>
+                                </constraints>
+                            </view>
+                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="1Rx-YO-YG4" firstAttribute="trailing" secondItem="Tpz-ak-jmc" secondAttribute="trailing" id="I1i-fc-0ZN"/>
+                            <constraint firstItem="Tpz-ak-jmc" firstAttribute="leading" secondItem="1Rx-YO-YG4" secondAttribute="leading" id="W9u-va-0VN"/>
+                            <constraint firstItem="1Rx-YO-YG4" firstAttribute="bottom" secondItem="Tpz-ak-jmc" secondAttribute="bottom" id="fJF-ta-lWi"/>
+                            <constraint firstItem="Tpz-ak-jmc" firstAttribute="top" secondItem="1Rx-YO-YG4" secondAttribute="top" id="qkT-GN-K5U"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="1Rx-YO-YG4"/>
                     </view>
                     <navigationItem key="navigationItem" id="bWv-pc-F2Z"/>
+                    <connections>
+                        <outlet property="tableView" destination="m4C-aA-X8G" id="0nQ-Ui-33U"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Xgo-eM-EwA" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
