--- a/CCQNews/CCQNews/Base.lproj/Main.storyboard
+++ b/CCQNews/CCQNews/Base.lproj/Main.storyboard
@@ -117,6 +117,7 @@
                         <segue destination="5Hu-oD-aM5" kind="relationship" relationship="viewControllers" id="XHS-Z3-lk1"/>
                         <segue destination="hNR-Ho-C1r" kind="relationship" relationship="viewControllers" id="sse-LN-oUt"/>
                         <segue destination="cgm-Zi-4QL" kind="relationship" relationship="viewControllers" id="kj2-bk-ZMr"/>
+                        <segue destination="qkz-ox-ukE" kind="relationship" relationship="viewControllers" id="v3q-5a-32V"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="RhA-Md-WSN" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -208,6 +209,56 @@
             </objects>
             <point key="canvasLocation" x="1617" y="843"/>
         </scene>
+        <!--Personal CenterVC-->
+        <scene sceneID="5oc-bL-z1v">
+            <objects>
+                <viewController id="QnH-VF-DCd" customClass="CCQPersonalCenterVC" customModule="CCQNews" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="vjS-Np-AvC">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="C1g-JJ-zqL">
+                                <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                <subviews>
+                                    <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="sOY-Zx-Rkb">
+                                        <rect key="frame" x="0.0" y="0.0" width="375" height="618"/>
+                                        <color key="backgroundColor" red="0.94509803921568625" green="0.94509803921568625" blue="0.94509803921568625" alpha="1" colorSpace="calibratedRGB"/>
+                                        <connections>
+                                            <outlet property="dataSource" destination="QnH-VF-DCd" id="GbV-qS-aGZ"/>
+                                            <outlet property="delegate" destination="QnH-VF-DCd" id="CZa-Le-6FD"/>
+                                        </connections>
+                                    </tableView>
+                                </subviews>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <constraints>
+                                    <constraint firstItem="sOY-Zx-Rkb" firstAttribute="top" secondItem="C1g-JJ-zqL" secondAttribute="top" id="H3x-GE-56O"/>
+                                    <constraint firstItem="sOY-Zx-Rkb" firstAttribute="leading" secondItem="C1g-JJ-zqL" secondAttribute="leading" id="M6N-tR-fqh"/>
+                                    <constraint firstAttribute="trailing" secondItem="sOY-Zx-Rkb" secondAttribute="trailing" id="Rwd-bX-nwZ"/>
+                                    <constraint firstAttribute="bottom" secondItem="sOY-Zx-Rkb" secondAttribute="bottom" id="tRI-DY-uOU"/>
+                                </constraints>
+                            </view>
+                        </subviews>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <constraints>
+                            <constraint firstItem="C1g-JJ-zqL" firstAttribute="leading" secondItem="BnV-Du-krZ" secondAttribute="leading" id="Udd-Ib-Tn4"/>
+                            <constraint firstItem="C1g-JJ-zqL" firstAttribute="trailing" secondItem="BnV-Du-krZ" secondAttribute="trailing" id="YaJ-rI-XIv"/>
+                            <constraint firstItem="C1g-JJ-zqL" firstAttribute="bottom" secondItem="BnV-Du-krZ" secondAttribute="bottom" id="wXM-II-cnZ"/>
+                            <constraint firstItem="C1g-JJ-zqL" firstAttribute="top" secondItem="BnV-Du-krZ" secondAttribute="top" constant="-20" id="zz8-Fq-pmI"/>
+                        </constraints>
+                        <viewLayoutGuide key="safeArea" id="BnV-Du-krZ"/>
+                    </view>
+                    <navigationItem key="navigationItem" id="JHr-g3-OWp"/>
+                    <userDefinedRuntimeAttributes>
+                        <userDefinedRuntimeAttribute type="boolean" keyPath="fd_prefersNavigationBarHidden" value="YES"/>
+                    </userDefinedRuntimeAttributes>
+                    <connections>
+                        <outlet property="tableView" destination="sOY-Zx-Rkb" id="ibC-Pp-LqE"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="dFz-sD-UcE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1616.8" y="1560.2698650674663"/>
+        </scene>
         <!--视频-->
         <scene sceneID="6Tv-ze-Ctb">
             <objects>
@@ -227,6 +278,25 @@
                 <placeholder placeholderIdentifier="IBFirstResponder" id="KKr-zb-2nG" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="678" y="843"/>
+        </scene>
+        <!--个人-->
+        <scene sceneID="mfF-Qz-zwq">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" navigationBarHidden="YES" id="qkz-ox-ukE" customClass="CCQBaseNavigationVC" customModule="CCQNews" customModuleProvider="target" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="个人" id="o8d-Bm-FIx"/>
+                    <toolbarItems/>
+                    <nil key="simulatedTopBarMetrics"/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="lgv-cC-Z4w">
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="QnH-VF-DCd" kind="relationship" relationship="rootViewController" id="HcC-aQ-Mlh"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Dr5-sF-2Wn" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="678" y="1561"/>
         </scene>
     </scenes>
 </document>
