--- a/CCQNews/CCQNews/Classes/Views/CCQHomeListCell/CCQHomeListCell.xib
+++ b/CCQNews/CCQNews/Classes/Views/CCQHomeListCell/CCQHomeListCell.xib
@@ -41,7 +41,7 @@
                                 <color key="textColor" white="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <imageView clipsSubviews="YES" tag="100" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NlC-Tv-w57">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="NlC-Tv-w57">
                                 <rect key="frame" x="10" y="90.5" width="300" height="168.5"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="NlC-Tv-w57" secondAttribute="height" multiplier="16:9" priority="750" id="2Nm-XU-VBg"/>
