--- a/CCQNews/CCQNews/Base.lproj/Main.storyboard
+++ b/CCQNews/CCQNews/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="Zbf-cr-ivE">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14490.70" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -107,7 +107,7 @@
         <!--Base Tab BarVC-->
         <scene sceneID="V4b-2b-Z2q">
             <objects>
-                <tabBarController id="Zbf-cr-ivE" customClass="CCQBaseTabBarVC" customModule="CCQNews" customModuleProvider="target" sceneMemberID="viewController">
+                <tabBarController storyboardIdentifier="CCQTabbar" id="Zbf-cr-ivE" customClass="CCQBaseTabBarVC" customModule="CCQNews" customModuleProvider="target" sceneMemberID="viewController">
                     <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="7m6-OM-ted">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
                         <autoresizingMask key="autoresizingMask"/>
